--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.firstventuresgroup.dailychallenges"
+        applicationId "com.okomilabs.dailychallenges"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
