Base code for reminder notifications

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,11 @@
             android:name=".activities.MainActivity"
             android:screenOrientation="portrait" />
 
+        <receiver android:name=".helpers.ReminderReceiver" />
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/admob_id" />
 
     </application>
-
 </manifest>
